objects/bedrock__LghtIdeasSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bedrock__Description__c</fullName>
        <description>Description field for settings value</description>
        <inlineHelpText>Description field for settings value</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bedrock__Label__c</fullName>
        <description>Settings variable label</description>
        <inlineHelpText>Settings variable label</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bedrock__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LghtIdeas Settings</label>
</CustomObject>